# CompensateScatter

./: CMakeLists.txt
conf/: conf.txt
include/: scatter.h  utils.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  scatter.cpp  utils.cpp
test/: CMakeLists.txt  scatterTest.cpp
