cmake_minimum_required(VERSION 3.14)
project(CompensateScatter)
set(CMAKE_CXX_STANDARD 14)
INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/include
)
LINK_DIRECTORIES(
        ${PROJECT_BINARY_DIR}/lib
)
FIND_PACKAGE(
        OpenCV 3 REQUIRED
)
SET(
        LIBS
        CompensateScatter
        ${OpenCV_LIBS}
)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(main)
INCLUDE_DIRECTORIES(Opencv_INCLUDE_DIRS)
TARGET_LINK_LIBRARIES(CompensateScatter ${LIBS})